[gd_scene load_steps=9 format=2]

[ext_resource path="res://backgounds/night-sky-at-ceres.jpg" type="Texture" id=1]
[ext_resource path="res://levels/ui/newgame.gd" type="Script" id=2]
[ext_resource path="res://levels/bottomhud.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/button1.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/title.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.8, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.8, 0, 1 )

[node name="Newgame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Night Sky" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )

[node name="Game name" type="Label" parent="."]
margin_top = 27.0
margin_right = 1280.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 5 )
text = "BUTTON_START"
align = 1
valign = 1

[node name="Bottomhud" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 254.5
margin_top = 195.0
margin_right = 1036.5
margin_bottom = 711.0

[node name="Noob" type="Button" parent="VBoxContainer"]
margin_right = 785.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
text = "START_NOOB"

[node name="Thisfirst" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 785.0
margin_bottom = 204.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
text = "START_THISFIRST"

[node name="Challenge" type="Button" parent="VBoxContainer"]
margin_top = 208.0
margin_right = 785.0
margin_bottom = 308.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
text = "START_CHALLENGE"

[node name="Maniac" type="Button" parent="VBoxContainer"]
margin_top = 312.0
margin_right = 785.0
margin_bottom = 412.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
text = "START_MANIAC"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 416.0
margin_right = 785.0
margin_bottom = 516.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 3 )
text = "BUTTON_RETURN"

[connection signal="pressed" from="VBoxContainer/Noob" to="." method="_on_noob_pressed"]
[connection signal="pressed" from="VBoxContainer/Thisfirst" to="." method="_on_thisfirst_pressed"]
[connection signal="pressed" from="VBoxContainer/Challenge" to="." method="_on_challenge_pressed"]
[connection signal="pressed" from="VBoxContainer/Maniac" to="." method="_on_maniac_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
